--- a/cliente/styles/fight.css
+++ b/cliente/styles/fight.css
@@ -64,6 +64,19 @@ td, tr {
     border-radius: 15px;
 }
 
+.pm {
+    color: rgb(66, 180, 66);
+    text-shadow: 0 4px 8px black;
+    font-size: 22px;
+    text-align: center;
+    vertical-align: middle;
+    font-weight: bold;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.37);
+    border-radius: 15px;
+}
+
 .icon {
     position: relative;
     background-size: 100%;
@@ -125,6 +138,15 @@ td, tr {
 }
 .bomb3 {
     background-image: url(../img/icons/bomb3.png);
+}
+.dolly1 {
+    background-image: url(../img/icons/dolly1.png);
+}
+.dolly2 {
+    background-image: url(../img/icons/dolly2.png);
+}
+.dolly3 {
+    background-image: url(../img/icons/dolly3.png);
 }
 
 .green {
