Añadidos diagramas de clase y secuencia

--- a/cliente/views/main.html
+++ b/cliente/views/main.html
@@ -36,8 +36,8 @@
     <div id="add-friend-container" class="hidden">
         <h1>Agregar amigo</h1>
         <div class="form-group">
-            <label class="control-label">Nombre o email</label>
-            <input class="form-control" id="textFriend" placeholder="Nombre o email" type="text">
+            <label class="control-label">Introduce su email</label>
+            <input class="form-control" id="textFriend" placeholder="Email" type="text">
         </div>
         <div class="button-center">
             <button class="play-button" onclick="addFriend()">Aceptar</button>
