Añadida pantalla con información de las razas

--- a/cliente/styles/login.css
+++ b/cliente/styles/login.css
@@ -78,7 +78,7 @@ button:focus {
 }
 
 #content {
-    height: 95vh;
+    min-height: 95vh;
     background: url(../img/sub-back.png) center center no-repeat;
     background-size: cover;
     background-position: center;
