--- a/cliente/views/login.html
+++ b/cliente/views/login.html
@@ -37,7 +37,7 @@
         <div class="content-menu menu-flex">
             <div class="menu-left">
                 <a href="/">INICIO</a>
-                <a href="#">CARTAS</a>
+                <a href="/races">RAZAS</a>
             </div>
             <div class="menu-center">
                 <button class="play-button">JUGAR</button>
